# backend/ent/migrate/schema.go
@@ -975,6 +975,7 @@ var (
 		{Name: "code", Type: field.TypeString, Size: 16},
 		{Name: "name", Type: field.TypeString, Size: 200},
 		{Name: "status", Type: field.TypeString, Size: 20, Default: "active"},
+		{Name: "member_limit", Type: field.TypeInt, Default: 10},
 		{Name: "auth_version", Type: field.TypeInt64, Default: 1},
 		{Name: "target_config", Type: field.TypeJSON, Nullable: true, SchemaType: map[string]string{"postgres": "jsonb"}},
 		{Name: "group_id", Type: field.TypeInt64},
@@ -988,13 +989,13 @@ var (
 		ForeignKeys: []*schema.ForeignKey{
 			{
 				Symbol:     "desktop_organizations_groups_desktop_organizations",
-				Columns:    []*schema.Column{DesktopOrganizationsColumns[10]},
+				Columns:    []*schema.Column{DesktopOrganizationsColumns[11]},
 				RefColumns: []*schema.Column{GroupsColumns[0]},
 				OnDelete:   schema.NoAction,
 			},
 			{
 				Symbol:     "desktop_organizations_users_desktop_organizations",
-				Columns:    []*schema.Column{DesktopOrganizationsColumns[11]},
+				Columns:    []*schema.Column{DesktopOrganizationsColumns[12]},
 				RefColumns: []*schema.Column{UsersColumns[0]},
 				OnDelete:   schema.NoAction,
 			},
@@ -1011,7 +1012,7 @@ var (
 			{
 				Name:    "idx_desktop_organizations_gateway_user_active",
 				Unique:  true,
-				Columns: []*schema.Column{DesktopOrganizationsColumns[11]},
+				Columns: []*schema.Column{DesktopOrganizationsColumns[12]},
 				Annotation: &entsql.IndexAnnotation{
 					Where: "deleted_at IS NULL",
 				},
@@ -1019,7 +1020,7 @@ var (
 			{
 				Name:    "idx_desktop_organizations_group_active",
 				Unique:  false,
-				Columns: []*schema.Column{DesktopOrganizationsColumns[10]},
+				Columns: []*schema.Column{DesktopOrganizationsColumns[11]},
 				Annotation: &entsql.IndexAnnotation{
 					Where: "deleted_at IS NULL",
 				},
